ajout du chemin relatif pour les images pour git pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <div class="logo">
-            <img src="/img/logo.png" alt="">
+            <img src="./img/logo.png" alt="">
         </div>
         <h1>Projet 1<br><span>Nantes Développeur Web PHP Septembre 2021</span></h1>
     </header>
@@ -61,7 +61,7 @@
                     <p>Marc attend une vraie cohérence graphique entre les pages. Il nous a fourni une photo de sa caravane. Cette photo pourra nous servir à faire un logo simple si nécessaire. En tout cas il a beaucoup travaillé sur les couleurs et il m'a informé que le bleu de sa caravane était du #1a2b44 et la couleur cuivrée du #a77252.</p>
                     <p>Secondairement, au cas où cela nous intéresserait, les couleurs de ses lampions sont du blanc, un vert pale #8cb191 et un jaune #fde035.</p>
 
-                    <img class="illustration" src="/img/truckmuche-foodtruck.jpg" alt="">
+                    <img class="illustration" src="./img/truckmuche-foodtruck.jpg" alt="">
 
                     <p>Marc nous fournit également les photos de ses produits avec une petite description. Tout est dans le dossier /src.</p>                    
 
