Ajout du lien vers src

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                     <img class="illustration" src="./img/truckmuche-foodtruck.jpg" alt="">
 
-                    <p>Marc nous fournit également les photos de ses produits avec une petite description. Tout est dans le dossier /src.</p>                    
+                    <p>Marc nous fournit également les photos de ses produits avec une petite description. Tout est dans <a href="https://github.com/karlmorisset/truckmuche/tree/main/src">le dossier /src</a>.</p>                    
 
                     <p>Si vous avez besoin d'utiliser des icônes, notamment pour les réseaux sociaux, je souhaite que celles-ci proviennent de la bibliothèque <span class="emphasis">Font Awesome</span>. La police du site sera <span class="emphasis">Lato</span>. Je souhaite que vous utilisiez <span class="emphasis">Git</span> pour versionner et gérer les développements de chacun. Pour le MVP, la page sera déployée avec <span class="emphasis">Git Pages</span>.</p>
 
