Ajout de l'emphase sur le nom de l'agence

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="scenario">
         <h2>Scénario</h2>
-        <p>Enfin, vous avez trouvé votre premier stage en tant que développeur web chez <span>La Petite Agence</span>, une agence web de Nantes. Vous intégrez une petite équipe et Loïc, le boss, souhaite vous confier votre premier projet à échelle réelle.</p>
+        <p>Enfin, vous avez trouvé votre premier stage en tant que développeur web chez <span class="emphasis">La Petite Agence</span>, une agence web de Nantes. Vous intégrez une petite équipe et Loïc, le boss, souhaite vous confier votre premier projet à échelle réelle.</p>
     </section>
 
     <section>
