Harmonisation nom de marque

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="header">
                 <p>De : Loïc</p>
                 <p>À : Vous</p>
-                <p>Objet : Création du site TruckMuche</p>
+                <p>Objet : Création du site Truckmuche</p>
             </div>
 
             <div class="content">
