--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <p>Notre nouveau client <span class="emphasis">Truckmuche</span> est une petite entreprise de vente ambulante de cookies et de gâteaux. Son créateur, Marc, a une petite caravane qu'il déplacera régulièrement selon un calendrier prédéfini. Il nous confie donc la création de son site afin que ses clients puissent voir ses produits et son emplacement. Marc souhaite nous confier le design également afin que nous laissions parler notre créativité !</p>
                 
-                <p>J'ai très envie de vous confier ce projet. Je vous laisse vous organiser avec votre équipe pour la répartition des taches.</p>
+                <p>J'ai très envie de vous confier ce projet. Je vous laisse vous organiser avec votre équipe pour la répartition des tâches.</p>
 
                 <section class="fonctionnalites">
                     <h3>Fonctionnalités</h3>
