--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <section class="fonctionnalites">
                     <h3>Fonctionnalités</h3>
 
-                    <p>Dans cette première version, Marc souhaite juste avoir un MVP. À terme, les clients pourront voir sur une carte Google Map l'emplacement du foodTruck avec un calendrier. Mais dans cette première version ce ne sera qu'une carte statique. Donc à ce stade, le calendrier ne sera pas actif, mais sont emplacement devra être prévu.</p>
+                    <p>Dans cette première version, Marc souhaite juste avoir un MVP. À terme, les clients pourront voir sur une carte Google Map l'emplacement du food-truck avec un calendrier. Mais dans cette première version ce ne sera qu'une carte statique. Donc à ce stade, le calendrier ne sera pas actif, mais son emplacement devra être prévu.</p>
                     
                     <p>Il aimerait avoir une page avec la liste des produits qu'il vend avec une photo et une description de chacun. Il voudrait également une page avec l'histoire de son projet et enfin une page avec ses coordonnées de contact et la carte Google Map.</p>
                 </section>
