--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <section class="brief">
                     <h3>Contraintes techniques</h3>
                     
-                    <p>La cible sont des personnes mobiles, curieuses, trentaine/quarataine. Il faudra que le site soit parfaitement fonctionnel sur téléphone mobile en pensant à réorganiser le contenu avec soin pour chaque appareil.</p>
+                    <p>La cible sont des personnes mobiles, curieuses, trentaine/quarantaine. Il faudra que le site soit parfaitement fonctionnel sur téléphone mobile en pensant à réorganiser le contenu avec soin pour chaque appareil.</p>
                     
                     <p>Il devra fonctionner évidemment sur ordinateur et sur tablette. Il faudra veiller à ce qu’aucun élément ne soit coupé et que le texte ait une taille suffisante. Il faudra déterminer les breakpoints appropriés. </p>
                     <p>Les icônes vers les réseaux sociaux Instagram et Facebook devront être présentes.</p>
@@ -69,9 +69,9 @@
 
                     <h3>Présentation du projet</h3>
 
-                    <p>Vendredi, j'aimerai une présentation de l'avancée du projet et le vendredi suivant je serai ravi de voir votre présentation du projet final avec une petite mise en contexte, expliquer les choix techniques, pourquoi ce site a été développé etc.</p>
+                    <p>Vendredi, j'aimerais une présentation de l'avancée du projet et le vendredi suivant je serais ravi de voir votre présentation du projet final avec une petite mise en contexte, expliquer les choix techniques, pourquoi ce site a été développé, etc.</p>
 
-                    <p>Si tu as des questions n’hésite pas à m’écrire.</p>
+                    <p>Si vous avez des questions n’hésitez pas à m’écrire.</p>
                     <p>Bonne journée!</p>
                     <p>Loïc</p>
                 </section>
