typo + ajustements de styles

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h3>Options possibles</h3>
                     <ul>
                         <li>
-                            Vous pouvez faire en sorte que la carte OpenStreetMap ne soit pas une simple capture d'écran, mais une carte réelle dans laquelle on puisse se déplacer
+                            Vous pouvez faire en sorte que la carte OpenStreetMap ne soit pas une simple capture d'écran, mais une carte réelle dans laquelle on puisse se déplacer.
                         </li>
                         <li>
                             Lorsque l'utilisateur saisi un message dans le formulaire de contact et qu'il clique sur "Envoyer", le bouton passe temporairement en vert et le texte du bouton change en "Message envoyé" avant de revenir à son état initial au bout de 4 secondes.
